--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.0",
+    "typesense": "^1.2.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
